--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/viacheslav-karnaukh/node_server.git"
+  },
   "author": "Viacheslav Karnaukh",
   "license": "MIT"
 }
